# 561_Project

./: .gitignore  561_Project  README.md  _query.fa  blast.py  config.json  config.py  go.mod  main.py  needleman_wunsch.py  prob_blast  prob_blast.go  prob_blast.py  prob_blast.rs  query.fa  query_eval.fa  query_long.fa  requirements.txt  res.xml  utils.py
PROB_BLAST/: PROB_BLAST.sln
blast/: index.go  ungapped_extension.go
data/: chr22.maf.ancestors.42000000.complete.boreo.fa  query.fa
eval/: eval.go
output/: alignments.q.query_eval.fa.w.7.hit_thres.0.80.delta.2.50.e_thres.2.00.json  alignments.q.query_random.fa.w.7.hit_thres.0.60.delta.2.50.e_thres.2.00.json  alignments.q.query_random.fa.w.7.hit_thres.0.80.delta.1.00.e_thres.2.00.json  alignments.q.query_random.fa.w.7.hit_thres.0.80.delta.10.00.e_thres.2.00.json  alignments.q.query_random.fa.w.7.hit_thres.0.80.delta.2.50.e_thres.2.00.json  alignments.q.query_random.fa.w.7.hit_thres.0.90.delta.2.50.e_thres.2.00.json  alignments.q:query.fa.w:4.hit_thres:0.90.delta:2.50.hsp_thres:11.00.json  alignments.q:query.fa.w:7.hit_thres:0.90.delta:2.50.hsp_thres:11.00.json  alignments.q:query_long.fa.w:7.hit_thres:0.60.delta:2.50.hsp_thres:15.00.json  alignments.q:query_long.fa.w:7.hit_thres:0.80.delta:2.50.hsp_thres:15.00.json  alignments.q:query_long.fa.w:7.hit_thres:0.90.delta:1.00.hsp_thres:15.00.json  alignments.q:query_long.fa.w:7.hit_thres:0.90.delta:10.00.hsp_thres:15.00.json  alignments.q:query_long.fa.w:7.hit_thres:0.90.delta:2.00.hsp_thres:15.00.json  (+3 more)
pyext-probblast/: Cargo.toml
pyext-probblast/src/: lib.rs
(+15 files in other folders)
